<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_white"
    tools:context=".MainActivity" >

	<!-- *******************  Fields  ************************ -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginTop="0dp" 
        android:layout_marginBottom="5dp" 
        android:layout_marginLeft="5dp" 
        android:layout_marginRight="5dp">
        
        <TableRow
            style="@style/rows_style">
            
            <TextView
                android:id="@+id/volts_textview"
                style="@style/labels_style"
                android:text="@string/label_volts"/>
            
            <EditText
                android:id="@+id/volts_edittext"
                style="@style/fields_style" />

</TableRow>
        
        <TableRow
            style="@style/rows_style">
        	
        	<TextView
        	    android:id="@+id/amps_textview"
                style="@style/labels_style"
                android:text="@string/label_amps"/>
            
            <EditText
                android:id="@+id/amps_edittext"
                style="@style/fields_style"/></TableRow>
                        
        <TableRow
            style="@style/rows_style">
        
        	<TextView
        	    android:id="@+id/ohms_textview"
                style="@style/labels_style"
                android:text="@string/label_ohms"/>
            
            <EditText
                android:id="@+id/ohms_edittext"
                style="@style/fields_style"/></TableRow>
            
        <TableRow
            style="@style/rows_style">
        
        	<TextView
        	    android:id="@+id/watts_textview"
                style="@style/labels_style"
                android:text="@string/label_watts"/>
            
            <EditText
                android:id="@+id/watts_edittext"
                style="@style/fields_style"/></TableRow></TableLayout>
        
        <!-- This view is left empty for future ad implementation -->
        <LinearLayout
	            android:layout_height="0dp"
	            android:layout_width="match_parent"
	            android:layout_weight="1"></LinearLayout>
    
    
    
    <!-- *******************  Keypad  ************************ -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:background="@drawable/background_dark_gray"
        android:paddingLeft="5dp"
       	android:paddingTop="5dp"
		android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:baselineAligned="false">
        
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
            
            <Button
                android:id="@+id/seven_button"
                style="@style/num_buttons_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/seven"/>
            
            <Button
                android:id="@+id/eight_button"
                style="@style/num_buttons_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/eight"/>
            
            <Button
                android:id="@+id/nine_button"
                style="@style/num_buttons_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/nine"/> 
                
            <Button
                android:id="@+id/reset_button"
                style="@style/reset_delete_buttons_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:text="@string/reset" /></LinearLayout>
            
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal" >
            
            <LinearLayout 
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
            	android:orientation="vertical">
                
                <Button
                	android:id="@+id/four_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/four"/>
            
            	<Button
                	android:id="@+id/one_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/one"/>
            
            	<Button
                	android:id="@+id/zero_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/zero"/></LinearLayout>
            
            <LinearLayout 
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
            	android:orientation="vertical">
            	
                <Button
                	android:id="@+id/five_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/five"/>
            
           	 	<Button
                	android:id="@+id/two_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/two"/>
            
            	<Button
                	android:id="@+id/decimal_point_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/point"/></LinearLayout>
            
            <LinearLayout 
                android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
            	android:orientation="vertical">
            	
                <Button
                	android:id="@+id/six_button"
               		style="@style/num_buttons_style"
               		android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/six"/>
            
            	<Button
                	android:id="@+id/three_button"
                	style="@style/num_buttons_style"
                	android:layout_width="match_parent"
                	android:layout_height="0dp"
                	android:layout_weight="1"
                	android:text="@string/three"/>
            
            	<Button
                	android:id="@+id/delete_button"
                	style="@style/reset_delete_buttons_style"
                	android:layout_width="match_parent"
            		android:layout_height="0dp"
            		android:layout_weight="1"
            		android:layout_margin="3dp"
                	android:text="@string/delete"/></LinearLayout>
            
            <!-- ******************* SI Prefixes  ************************ -->	
            <ScrollView 
            	android:layout_width="0dp"
            	android:layout_height="match_parent"
            	android:layout_weight="1"
            	android:scrollbars="none">
            
	            <LinearLayout 
	                android:layout_height="wrap_content"
	                android:layout_width="match_parent"
	                android:orientation="vertical">
	                
	                <Button
	              		android:id="@+id/nano_prefix_button"
	              		style="@style/prefix_buttons_style"
	              		android:text="@string/nano"/>
	                
	                <Button
	              		android:id="@+id/micro_prefix_button"
	              		style="@style/prefix_buttons_style"
	              		android:text="@string/micro"/>
	                
	                <Button
	              		android:id="@+id/milli_prefix_button"
	              		style="@style/prefix_buttons_style"
	              		android:text="@string/milli"/>
	                
	                <Button
	              		android:id="@+id/kilo_prefix_button"
	              		style="@style/prefix_buttons_style"
	              		android:text="@string/kilo"/>
	                
	                <Button
	              		android:id="@+id/mega_prefix_button"
	              		style="@style/prefix_buttons_style"
	              		android:text="@string/mega"/>
	           		<Button
	              		android:id="@+id/giga_prefix_button"
	              		style="@style/prefix_buttons_style"
	              		android:text="@string/giga"/></LinearLayout></ScrollView>
        
        </LinearLayout>
    	
    </LinearLayout>
    
</LinearLayout>